@@ -42,7 +42,7 @@ class ModuleIsotopeProductVariantList extends ModuleIsotopeProductList
 			$objTemplate->title = $this->headline;
 			$objTemplate->id = $this->id;
 			$objTemplate->link = $this->name;
-			$objTemplate->href = $this->Environment->script . '?do=' . ((version_compare(VERSION.'.'.BUILD, '2.9.0', '>=')) ? 'themes&amp;table=tl_module' : 'modules') . '&amp;act=edit&amp;id=' . $this->id;
+			$objTemplate->href = 'contao/main.php?do=themes&amp;table=tl_module&amp;act=edit&amp;id=' . $this->id;
 
 			return $objTemplate->parse();
 		}
