@@ -16,6 +16,7 @@ Version 1.3.beta2 (2011-??-??)
 - Fixed a bug in runonce script preventing the database file from being refreshed
 - Fixed a bug with Contao 2.10 and the new foreignKey implementation
 - Fixed product translations not working (Ticket #448)
+- Fixed: direct links to edit mode of modules did not take account of themes
 
 Version 1.3.beta1 (2011-07-18)
 ------------------------------
